2016-07-11  Andy Buckley  <andy.buckley@cern.ch>

	* Add a built-in /REF-stripping option to data histo loading

	* Improvements to the Python ipol metadata interface.

2016-07-05  Andy Buckley  <andy.buckley@cern.ch>

	* Try to optimise long-vector building by not executing pow() if the exponent would be zero.

	* Split C++ calcValue function into two, to allow re-use of a precalculated long-vector.

2016-06-23  Andy Buckley  <andy.buckley@cern.ch>

	* Split 'dot product' part of ipol value calculation into a standalone calcValue function.

	* Use const references when passing const vectors in C++ API.

2016-04-14  Holger Schulz  <holger.schulz@cern.ch>

	* Introduce 1D sensitivity based on gradient

	* User needs to specify --cmap or --grad when running prof2-sens now

2016-04-01  Holger Schulz  <holger.schulz@cern.ch>

	* Add a first version of the parametrisation using Machine Learning

2016-02-16  Holger Schulz  <holger.schulz@cern.ch>

	* Bump to version 2.1.3

2016-02-15  Holger Schulz  <holger.schulz@cern.ch>

	* prof2-sens: bugfix, add weight file usage, clean up CL

	* prof2-I: add weight file usage

	* prof2-predict: add weight file usage, fix output writing

	* Extended documentation

2016-02-12  Holger Schulz  <holger.schulz@cern.ch>

	* Documentation including asciinema

2016-02-11  Holger Schulz  <holger.schulz@cern.ch>

	* Remove min_runs function, replace with numCoeffs
	from C++ code

	* Add prof2-envelopes script

	* In prof-tune simplechi2 --- continue on weight==0
	to allow some robustness when switching off bins


2016-02-10  Holger Schulz  <holger.schulz@cern.ch>

	* First version of prof2-runcombs plus sampling functions
	salvaged from Prof1, modified to have no scipy dependence

	* Add --rc switch to prof2-ipol to optionally read runcombs
	Syntax is  --rc runcoms.dat[colon]5
	(Minimally invasive addon)

	* Code cull in prof2-ipol. Only support multiprocessing
	version, default 1 thread. Changed CL switch to '-j'.

